--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 
 dependencies:
   http: ^0.13.5
+  http_parser: ^4.0.2
+  image_picker: ^1.0.4
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
