--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   http: ^0.13.5
   http_parser: ^4.0.2
+  flutter_dotenv: ^5.2.1
   image_picker: ^1.0.4
   flutter:
     sdk: flutter
