--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,13 @@ environment:
 
 dependencies:
   http: ^0.13.5
+  google_mlkit_barcode_scanning: ^0.11.0  # Replace google_ml_kit
+  google_mlkit_text_recognition: ^0.13.0 
   http_parser: ^4.0.2
   flutter_dotenv: ^5.2.1
   image_picker: ^1.0.4
+  clipboard: ^0.1.3
+  printing: ^5.9.1 # For PDF generation
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
@@ -26,3 +30,5 @@ flutter:
 
   assets:
     - assets/images/HygieneQuest.jpeg
+    - .env
+    
