--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   google_mlkit_text_recognition: ^0.13.0 
   http_parser: ^4.0.2
   flutter_dotenv: ^5.2.1
+  pdf: ^3.10.4
+  path_provider: ^2.1.1
   image_picker: ^1.0.4
   clipboard: ^0.1.3
   printing: ^5.9.1 # For PDF generation
