--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,10 @@ environment:
 
 dependencies:
   http: ^0.13.5
-  google_mlkit_barcode_scanning: ^0.11.0  # Replace google_ml_kit
+  share_plus: ^7.2.2
+  open_file: ^3.3.2
+  permission_handler: ^11.3.0
+  google_mlkit_barcode_scanning: ^0.11.0
   google_mlkit_text_recognition: ^0.13.0 
   http_parser: ^4.0.2
   flutter_dotenv: ^5.2.1
@@ -17,7 +20,7 @@ dependencies:
   path_provider: ^2.1.1
   image_picker: ^1.0.4
   clipboard: ^0.1.3
-  printing: ^5.9.1 # For PDF generation
+  printing: ^5.9.1
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
@@ -26,6 +29,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.4
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/app_logo.png"
+  min_sdk_android: 21
 
 flutter:
   uses-material-design: true
@@ -33,4 +43,3 @@ flutter:
   assets:
     - assets/images/HygieneQuest.jpeg
     - .env
-    
