--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,3 +59,10 @@ flutter:
     - assets/images/Group7.png
     - assets/images/Group8.png
     - assets/images/Keti.png
+    - assets/images/Group9.png
+    - assets/images/StatusIcon.png
+    - assets/images/Vector.png
+    - assets/images/mic_line.png
+    - assets/images/paperclip.png
+    - assets/images/SendIcon.png
+    
