--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,4 +71,9 @@ flutter:
     - assets/images/HygieneProducts.png
     - assets/images/Download.png
     - assets/images/Analyse.png
+    - assets/images/AirwickFreshmaticAutospray.png
+    - assets/images/DettolAntibacterialSoap.png
+    - assets/images/DettolInstantSanitizer.png
+    - assets/images/HarpicPowerPlus.png
+    - assets/images/view.png
 
