--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   share_plus: ^7.2.2
   open_file: ^3.3.2
   permission_handler: ^11.3.0
+  shared_preferences: ^2.2.2
 
   http_parser: ^4.0.2
   flutter_dotenv: ^5.2.1
